Tydzien_3/Zadanie_2/vnet_subnets.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
      "vnetName": {
        "type": "string",
        "defaultValue": "VNet1",
        "metadata": {
          "description": "VNet name"
        }
      },
      "vnetAddressPrefix": {
        "type": "string",
        "defaultValue": "10.0.0.0/16",
        "metadata": {
          "description": "Address prefix"
        }
      },
      "subnet1Prefix": {
        "type": "string",
        "defaultValue": "10.0.0.0/24",
        "metadata": {
          "description": "Subnet 1 Prefix"
        }
      },
      "subnet1Name": {
        "type": "string",
        "defaultValue": "Subnet1",
        "metadata": {
          "description": "Subnet 1 Name"
        }
      },
      "subnet2Prefix": {
        "type": "string",
        "defaultValue": "10.0.1.0/24",
        "metadata": {
          "description": "Subnet 2 Prefix"
        }
      },
      "subnet2Name": {
        "type": "string",
        "defaultValue": "Subnet2",
        "metadata": {
          "description": "Subnet 2 Name"
        }
      },
      "NSG1Name":{
        "type": "string",
        "defaultValue": "NSGforSubnet1",
        "metadata": {
        "description": "This is name of the networkSecurityGroup that will be assigned to Application Subnet"
        }
      },
      "NSG2Name":{
        "type": "string",
        "defaultValue": "NSGforSubnet2",
        "metadata": {
        "description": "This is name of the networkSecurityGroup that will be assigned to Application Subnet"
        }
      },
      "location": {
        "type": "string",
        "defaultValue": "[resourceGroup().location]",
        "metadata": {
          "description": "Location for all resources."
        }
      }
    },
    "variables": {},
    "resources": [
      {
      "apiVersion": "2015-05-01-preview",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('NSG1Name')]",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "rdp_rule",
            "properties": {
              "description": "Allow SSH",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
          {
      "apiVersion": "2015-05-01-preview",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('NSG2Name')]",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "rdp_rule",
            "properties": {
              "description": "Allow SSH",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
      {
        "apiVersion": "2018-10-01",
        "type": "Microsoft.Network/virtualNetworks",
        "name": "[parameters('vnetName')]",
        "location": "[parameters('location')]",
        "dependsOn":[
          "[concat('Microsoft.Network/networkSecurityGroups/', parameters('NSG1Name'))]",
          "[concat('Microsoft.Network/networkSecurityGroups/', parameters('NSG2Name'))]"
        ],
        "properties": {
          "addressSpace": {
            "addressPrefixes": [
              "[parameters('vnetAddressPrefix')]"
            ]
          }
        },
        "resources": [
          {
            "apiVersion": "2018-10-01",
            "type": "subnets",
            "location": "[parameters('location')]",
            "name": "[parameters('subnet1Name')]",
            "dependsOn": [
              "[parameters('vnetName')]"
            ],
            "properties": {
              "addressPrefix": "[parameters('subnet1Prefix')]",
              "networkSecurityGroup":{
              "id":"[resourceId('Microsoft.Network/networkSecurityGroups', parameters('NSG1Name'))]"  
              }
            }
          },
          {
            "apiVersion": "2018-10-01",
            "type": "subnets",
            "location": "[parameters('location')]",
            "name": "[parameters('subnet2Name')]",
            "dependsOn": [
              "[parameters('vnetName')]",
              "[parameters('subnet1Name')]"
            ],
            "properties": {
              "addressPrefix": "[parameters('subnet2Prefix')]",
              "networkSecurityGroup":{
              "id":"[resourceId('Microsoft.Network/networkSecurityGroups', parameters('NSG2Name'))]"  
              }
            }
          }
        ]
      }
    ]
  }
